✨ Proper html headers

--- a/frontend/static/locales/en/TMDB.yaml
+++ b/frontend/static/locales/en/TMDB.yaml
@@ -1,1 +1,5 @@
 SYNC_SUCESS: Movies synched.
+PRIMARY_COLOR: lightBlue
+TITLE: Notion - TMDB
+LOGO_PATH: /tmdb.jpeg
+SEARCH_PLACEHOLDER: TMDB lookup
