💚 Working on gocardless

--- a/frontend/static/locales/en/GBook.yaml
+++ b/frontend/static/locales/en/GBook.yaml
@@ -6,3 +6,4 @@ PRIMARY_COLOR: orange
 TITLE: Notion - GBook
 LOGO_PATH: /gbook.jpeg
 SEARCH_PLACEHOLDER: GBook lookup
+AUTH_KEY: 2a557a18-cd3a-4ac1-b9ce-3a5cb92468b7
