--- a/frontend/static/locales/en/TMDB.yaml
+++ b/frontend/static/locales/en/TMDB.yaml
@@ -6,3 +6,4 @@ PRIMARY_COLOR: lightBlue
 TITLE: Notion - TMDB
 LOGO_PATH: /tmdb.jpeg
 SEARCH_PLACEHOLDER: TMDB lookup
+AUTH_KEY: e19ffced-a96f-4f22-8f58-163bd4c86f5a
