--- a/frontend/static/locales/en/GoCardless.yaml
+++ b/frontend/static/locales/en/GoCardless.yaml
@@ -1,4 +1,3 @@
 PRIMARY_COLOR: pink
-TITLE: Notion - GoCardless
-LOGO_PATH: /gocardless.jpeg
+LOGO_PATH: /gocardless.png
 AUTH_KEY: 12fd872b-594c-80f8-9b18-0037bce45b0a
